2019-02-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.2-4 [not yet released]

	* man/rbwheel.Rd: need 'robustbase' attached for ICS example

2019-02-08  Martin Mächler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.2-3

	* R/BACON-alg.R (GiveTis, .lmBACON): speed up, using .lm.fit() and
	hat(), fixing wrong Hii computation, thanks to  Daniel Weeks at pitt dot edu.

2014-12-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/rbwheel-fun.R (rbwheel): was wrong only for 'frac = 0', i.e.,
	*no* outliers

2014-09-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/reclas.R (reclas): recursive location and scale ("recursive	median")
	from Rolf Turner

2013-03-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/covNNC.Rd:
	* R/covNNC.R: add, as historical reference, from former CRAN
	package covRobust.  The 'cov.nnve()" is called 'covNNC()' now.

2009-12-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/BACON-alg.R (GiveTis): remove multi-argument return() legacy

2009-11-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/mvBACON.Rd: typo in \link{}

2009-06-13  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/rbwheel-fun.R (rbwheel): scaleAfter = TRUE becomes default, as
	this is what was always intended.

2009-06-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-0, CRAN-released 2009-06-14

	* demo/rbwheel_ics.R: start adding ICS demos (using lattice in order
	to *combine* scatter plot matrices.

	* R/rbwheel-fun.R (rbwheel): add 'spherize' and 'scaleAfter'
	options, defaulting to FALSE.
	* man/rbwheel.Rd: dito

2009-05-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/L1medians.R (L1median): newly added, subsuming my code
	collection from December 2005.

	* NAMESPACE: added


2009-05-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-1

	* R/BACON-alg.R (mvBACON, BACON): newly added
